force-app/main/default/objects/DHKT_Related_Document__c/DHKT_Related_Document__c.object-meta.xml
<CustomObject>
    <label>DHKT Related Document</label>
    <nameField>
        <displayFormat>RD-{0000000000}</displayFormat>
        <label>Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHKT Related Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>