force-app/main/default/objects/DHKT_Related_Document__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <label>Document URL</label>
    <type>Url</type>
</CustomField>