force-app/main/default/objects/DHKT_Related_Document__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>DHKT_Request__c</referenceTo>
    <relationshipLabel>DHKT Related Documents</relationshipLabel>
    <relationshipName>DHKT_Related_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>