force-app/main/default/objects/DHKT_Related_Document__c/fields/Uploaded_File_c__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_File_c__c</fullName>
    <label>Uploaded_File__c</label>
    <type>TextArea</type>
</CustomField>