force-app/main/default/objects/DHKT_Related_Document__c/fields/Uploaded_File_URLs__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_File_URLs__c</fullName>
    <label>Uploaded File URLs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>